# zckb

./: .env.development  .env.production  .gitignore  API_INTEGRATION_FIX_SUMMARY.md  FRONTEND_API_INTEGRATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  README.md  TECH_UPGRADE_PLAN.md  config.json  db.json  generation_meta.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  功能需求文档.md  功能需求文档_对齐版.md
backend/: .env.example  .env.sqlite  .gitignore  API_DOCUMENTATION.md  API_ENDPOINTS.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  migrate_owner_to_user_stores.py  pyproject.toml  run.py  run_sqlite.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_owner_id_to_stores.py  2026_05_26_1002-2682d6bccfbd_initial_baseline_all_tables_created.py  2026_05_28_1637-44d7e086d0e4_add_collection_pack_models.py
backend/app/: main.py
backend/app/api/v1/: ai_analysis.py  annual_report.py  audit.py  auth.py  collection_pack.py  competitors.py  dashboard.py  insights.py  negative_reply.py  notifications.py  platforms.py  positive_activation.py  reports.py  reviews.py  router.py  settings.py  spider.py  store_dashboard.py  stores.py  subscription.py
backend/app/api/v1/admin/: admin.py  ai_config.py  collection_pack.py  region.py  store_dashboard.py  subscription.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  permissions.py  response.py  security.py
backend/app/models/: __init__.py  ai_config.py  base.py  collection_pack.py  notification.py  region.py  report.py  review.py  settings.py  spider.py  store.py  store_dashboard.py  subscription.py  user.py  user_region.py  verification_code.py
backend/app/schemas/: admin.py  ai_analysis.py  ai_config.py  audit.py  auth.py  collection_pack.py  common.py  competitor.py  dashboard.py  insights.py  negative_reply.py  notification.py  platform.py  positive_activation.py  region.py  report.py  review.py  settings.py  spider.py  store.py  store_dashboard.py  subscription.py
backend/app/scripts/: create_admin.py
backend/app/services/: __init__.py  admin_service.py  ai_analysis_service.py  ai_config_service.py  ai_service.py  annual_report_service.py  audit_service.py  auth_service.py  auto_reply_service.py  collection_pack_service.py  competitor_service.py  dashboard_service.py  dashboard_sync_service.py  excel_parser.py  insights_service.py  negative_reply_service.py  notification_service.py  platform_service.py  positive_activation_service.py  qr_login_service.py  region_service.py  report_service.py  review_import_service.py  review_service.py  review_sync_service.py  session_validation_service.py  settings_service.py  sms_login_service.py  sms_service.py  spider_engine.py  spider_service.py  store_dashboard_service.py  store_name_utils.py  store_service.py  store_sync_service.py  subscription_service.py  user_region_service.py
backend/app/services/.qr_results/: sms_82644d7a_1780991563432_heartbeat
backend/migrations/: 002_create_payment_records.py  003_add_billing_cycle.py  create_payment_records.py
backend/scripts/: init_data.py
spider/: .env.example  .gitignore  README.md  pyproject.toml  run.py  worker.py
spider/app/: main.py
spider/app/api/: router.py
spider/app/core/: config.py  database.py  logger.py
spider/app/spider/: base.py
spider/app/spiders/: base.py  douyin.py  factory.py  jd.py  meituan.py  taobao.py
spider/app/tasks/: api_client.py  celery_app.py  spider_tasks.py
src/: App.tsx  global.d.ts  index.css  main.tsx
src/api/: admin.ts  adminDashboardData.ts  ai-analysis.ts  analysis.ts  annual-report.ts  audit.ts  auth.ts  collectionPack.ts  competitor.ts  dashboard.ts  insights.ts  negative-reply.ts  platforms.ts  positive-activation.ts  region.ts  reports.ts  reviews.ts  settings.ts  spider.ts  store-dashboard.ts  stores.ts  subscription.ts
src/components/: AdminGuard.tsx  AdminLayout.tsx  MobileGuard.tsx  MobileLayout.tsx
src/context/: StoreContext.tsx
src/framework/: theme.css
src/hooks/: use-subscription-check.tsx  use-toast.tsx
(+74 files in other folders)
